<resources>
    <string name="app_name">NoteApp</string>
    <string name="txtInicio">Hola</string>
    <string name="txtInicio2">Vamos a Empezar</string>
    <string name="txtEmail">Email</string>
    <string name="txtContra">Contraseña</string>
    <string name="txtConfContra">Confirmar Contraseña</string>
    <string name="txtCrear">CREAR CUENTA</string>
    <string name="txtInicio3">¿Ya tienes una cuenta? </string>
    <string name="txtInicio4">Acceder</string>
    <string name="txtLogin1">Bienvenido de nuevo</string>
    <string name="txtBtnLogin">Acceder</string>
    <string name="txtLogin2">¿No tienes una cuenta? </string>
    <string name="txtLogin3"> Registrate</string>
    <string name="txtNewNote">Agregar Nueva Nota</string>
    <string name="txtNewNote2">Título</string>
    <string name="txtNewNote3">Contenido</string>
    <string name="txtNotes">Notas</string>
    <string name="txtRecycler">Título nota</string>
    <string name="txtRecycler1">Este puede ser un contenido de nota que puede ser largo</string>
    <string name="txtRecycler2">Time note</string>
    <string name="txtdelete">Borrar Nota</string>


</resources>